[package]
name = "A-Reliable-Transport-Protocol-In-Rust"
version = "0.1.0"
authors = ["Ashay Shah <shah.ashay12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rtp-send"
path = "src/send.rs"

[[bin]]
name = "rtp-recv"
path = "src/recv.rs"

[dependencies]
clap = "2.33.3"
rand = "0.7.3"